--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.0.5",
     "axios": "^0.22.0",
     "expo": "~42.0.1",
     "expo-font": "^9.2.1",
@@ -18,13 +19,14 @@
     "react-native-dropdown-picker": "^5.1.28",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.2",
-    "react-native-screens": "^3.8.0",
+    "react-native-screens": "~3.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-toast-message": "^1.6.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "react-native-safe-area-context": "3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
