--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.0.8",
     "@react-navigation/drawer": "^6.1.7",
     "@react-navigation/native": "^6.0.5",
+    "@react-navigation/native-stack": "^6.2.4",
     "@react-navigation/stack": "^6.0.10",
     "@stripe/stripe-react-native": "^0.1.4",
     "axios": "^0.22.0",
