--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
-    "styled-system": "^5.1.5"
+    "styled-system": "^5.1.5",
+    "expo-document-picker": "~9.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
